<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email_text_view"
            android:textColor="#333333"
            android:textSize="25sp"
            android:paddingBottom="10sp"/>

        <EditText
            android:id="@+id/email_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/email_background"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawablePadding="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/email_hint"
            android:autofillHints="@string/email_hint"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_text_view"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
            android:id="@+id/password_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/email_background"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/password_text_view"
            android:autofillHints="@string/password_text_view"/>
            <ImageView
                android:id="@+id/toggle_password_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_visibility_black_36"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:layout_gravity="center_vertical|end"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"/>
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="@drawable/background_button_login"
            android:text="@string/sign_in_button"/>
    </LinearLayout>
</FrameLayout>